--- a/Exercicios/desafio012/index.html
+++ b/Exercicios/desafio012/index.html
@@ -20,7 +20,7 @@
         
     </header>
 
-    <section>
+    <section class="normal">
         <p>
             Estou ficando cansado <br>
             Da tal tecnologia <br>
@@ -33,7 +33,7 @@
     </section>
 
 
-    <section>
+    <section class="imagem">
         <p>
             Não é mais como era antes <br>
             É tudo abreviado <br>
@@ -44,8 +44,8 @@
             E um coração desenhado. <br>
         </p>
     </section>
-
-    <section>
+    
+    <section class="normal">
         <p>
             Arroba agora não pesa <br>
             É parte de um endereço <br>
@@ -63,12 +63,11 @@
             Ponto e vírgula e um asterisco <br>
             Um beijo significa <br>
             Pra entender como fica <br>
-            Decifre esse rabisco. <br>
+            Decifre esse rabisco.
         </p>
     </section>
 
-
-    <section>
+    <section class="imagem">
         <p>
             Tenho saudade das cartas <br>
             Escritas com a própria mão <br>
@@ -76,12 +75,11 @@
             Só chegava no Verão <br>
             Mas matava a saudade <br>
             Era texto de verdade <br>
-            Nas linhas do coração. <br>
+            Nas linhas do coração. 
         </p>
-    </section> <br>
+    </section>
 
-
-    <section>
+    <section class="normal">
         <p>
             Agora, escrevo e envio <br>
             Chegando na mesma hora <br>
@@ -89,8 +87,7 @@
             A pessoa foi embora <br>
             Abriu outro aplicativo <br>
             O mundo ficou cativo <br>
-            Da tecnologia do agora. <br>
-        </p>
+            Da tecnologia do agora.
         <p>
             Felizmente, pra orar <br>
             Não precisa de internet <br>
