--- a/Exercicios/desafio012/index.html
+++ b/Exercicios/desafio012/index.html
@@ -33,7 +33,7 @@
     </section>
 
 
-    <section class="imagem">
+    <section class="imagem" id="img01">
         <p>
             Não é mais como era antes <br>
             É tudo abreviado <br>
@@ -44,7 +44,7 @@
             E um coração desenhado. <br>
         </p>
     </section>
-    
+
     <section class="normal">
         <p>
             Arroba agora não pesa <br>
@@ -67,7 +67,7 @@
         </p>
     </section>
 
-    <section class="imagem">
+    <section class="imagem" id="img02">
         <p>
             Tenho saudade das cartas <br>
             Escritas com a própria mão <br>
