--- a/Exercicios/ex023/tabela002.html
+++ b/Exercicios/ex023/tabela002.html
@@ -13,6 +13,7 @@
         table { 
             width: 500px;
             border-collapse: collapse;
+            position: relative;
         }
 
         caption { 
@@ -32,9 +33,20 @@
             color: white;
         }
 
+        thead > tr > th { 
+            position: sticky;
+            top: 0;
+            background-color: gray;
+        }
+
         .num { 
             text-align: right;
         }
+
+        tbody > tr:nth-child(odd) {
+            background-color: lightgray;
+        }
+
 
 </style>
 </head>
@@ -55,8 +67,8 @@
         <caption>População das Unidades Federativas</caption>
         <thead>
             <tr>
-                <th>Estado</th>
-                <th>População</th>
+                <th scope="col">Estado</th>
+                <th scope="col" style="width: 50px;">População</th>
             </tr>
         </thead>
         <tbody>
@@ -171,7 +183,7 @@
         </tbody>
         <tfoot>
             <tr>
-                <th>Total de habitantes</th>
+                <th scope="row">Total de habitantes</th>
                 <td class="num"><strong>215.384.126</strong></td>
             </tr>
         </tfoot>
